2017-07-02  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_predict_leaveoneout.m: nargout == 0 => create plots

	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Calling
	stk_predict_leaveoneout with no output arguments now automatically
	create two cross-validation diagnostics in two subplots:
	prediction VS observations, left panel, and normalized +
	residuals, right panel.
	* core/stk_predict_leaveoneout.m: Do not change nargout when
	calling overloaded method.
	* examples/01_kriging_basics/stk_example_kb10.m: Advertise the new
	syntax at the end of the script.

	@stk_dataframe/stk_dataframe.m: Accept char colnames/rownames

	* arrays/@stk_dataframe/stk_dataframe.m: Tolerate char arguments
	instead of cells for column and row names in the special case
	where the expected number of elements is one.

2017-07-01  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_probdom2d.m: New function

	* utils/stk_plot_probdom2d.m: New function to represent the
	uncertainty about a 2D Pareto front.  This function is currently
	considered experimental and should not be expected to produce a
	reliable representation of the uncertainty for difficult or
	high-dimensional optimization problems.
	* examples/03_miscellaneous/stk_example_misc04.m: Update the
	example to use the new function.
	* admin/octpkg/INDEX: Add the new function to the INDEX.

	@stk_model_gpposterior/stk_generate_samplepaths.m: Overload base

	* core/@stk_model_gpposterior/stk_generate_samplepaths.m: New
	function, overload base STK function.

	Remove all occurences of response_name

	* core/stk_model.m: Do not mention response_name as an optional
	field, since it isn't used anywhere in STK now.
	* examples/03_miscellaneous/stk_example_misc04.m: No more
	response_name.

	Return a plain numerical array from stk_generate_samplepaths

	* utils/stk_generate_samplepaths.m: Return a plain double
	precision numerical array; no more data frames here.